--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://premgc2025.github.io/react/",
+  "homepage": "https://premgc2025.github.io/firstapp/",
   "name": "treknepal",
 
  
